--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.graphql.graphiql.enabled=true
+spring.graphql.graphiql.enabled=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/basketball
 spring.datasource.username=root
